feat: setup simple config page

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "stremio-mdl",
   "version": "1.0.0",
   "workspaces": [
-    "packages/*"
+    "apps/*"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:server": "npm --workspace server run dev"
+    "dev:server": "npm --workspace server run dev",
+    "dev:web": "npm --workspace web run dev"
   },
   "repository": {
     "type": "git",
