--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "cheerio": "^1.1.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
