--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 node_modules/
 
 # env
-.env
-.env.production
+.env.*
+!.env.example
 
 # logs
 logs/
@@ -57,9 +57,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
 
 # vercel
 .vercel
