--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "cheerio": "^1.1.2",
     "lucide-react": "^0.544.0",
+    "lz-string": "^1.5.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
